<resources>
    <string name="app_name">RandomChat</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Logout</string>
    <string name="profile_image_view">profile image view</string>
    <string name="phone">Phone</string>
    <string name="update_profile">Update profile</string>
    <string name="username">Username</string>
    <string name="back_button">Back button</string>
    <string name="write_message">Write message</string>
    <string name="send_message">Send message</string>
</resources>