<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ProfileFragment">

    <ImageView
        android:id="@+id/profile_image_view"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/circular_bg"
        android:backgroundTint="@color/my_primary"
        android:scaleType="centerCrop"
        android:src="@drawable/person_icon"
        android:contentDescription="@string/profile_image_view" />

    <EditText
        android:id="@+id/profile_username"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="10dp"
        android:background="@drawable/edit_text_rounded_corner"
        android:elevation="5dp"
        android:hint="@string/username"
        android:inputType="text"
        android:padding="10dp"
        android:textColorHint="#546E7A"
        android:autofillHints=""
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/profile_phone"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:hint="@string/phone"
        android:inputType="text"
        android:layout_margin="10dp"
        android:background="@drawable/edit_text_rounded_corner"
        android:elevation="5dp"
        android:enabled="false"
        android:padding="10dp"
        tools:ignore="TextFields,VisualLintTextFieldSize"
        android:autofillHints="" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        >

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_rounded_corner"
            android:text="@string/update_profile"
            android:textColor="@color/white"
            android:id="@+id/profile_update_btn"
            tools:ignore="VisualLintButtonSize" />

        <ProgressBar
            android:layout_width="32dp"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/my_primary"
            android:layout_gravity="center"
            android:id="@+id/profile_progress_bar" />
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:id="@+id/logout_btn"/>
</LinearLayout>